kubernetes/apps/default/homelab-manager/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: homelab-manager
spec:
  endpointSelector:
    matchLabels:
      app:kubernetes.io/component: main
      app:kubernetes.io/instance: homelab-manager
      app:kubernetes.io/name: homelab-manager
  egress:
    # Allow to CoreDNS
    - toEndpoints:
        - matchLabels:
            any:k8s-app: kube-dns
            app:kubernetes.io/instance: coredns
            app:kubernetes.io/name: coredns
        - matchLabels:
            io:kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
    # Allow to Kafka
    - toEndpoints:
        - matchLabels:
            strimzi.io/cluster: hoohoot
            strimzi.io/component-type: kafka
        - matchLabels:
            io:kubernetes.pod.namespace: kafka
      toPorts:
        - ports:
            - port: "9092"
              protocol: TCP
    # Allow to Synapse
    - toEndpoints:
        - matchLabels:
            app:kubernetes.io/component: synapse
            app:kubernetes.io/instance: synapse
            app:kubernetes.io/name: matrix-synapse
        - matchLabels:
            io:kubernetes.pod.namespace: matrix
      toPorts:
        - ports:
            - port: "8008"
              protocol: TCP
  ingress:
    # Allow from Bazarr
    - fromEndpoints:
        - matchLabels:
            app:kubernetes.io/component: bazarr
            app:kubernetes.io/instance: bazarr
            app:kubernetes.io/name: bazarr
        - matchLabels:
            io:kubernetes.pod.namespace: downloads
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
    # Allow from Sonarr
    - fromEndpoints:
        - matchLabels:
            app:kubernetes.io/component: sonarr
            app:kubernetes.io/instance: sonarr
            app:kubernetes.io/name: sonarr
        - matchLabels:
            io:kubernetes.pod.namespace: downloads
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
    # Allow from Radarr
    - fromEndpoints:
        - matchLabels:
            app:kubernetes.io/component: radarr
            app:kubernetes.io/instance: radarr
            app:kubernetes.io/name: radarr
        - matchLabels:
            io:kubernetes.pod.namespace: downloads
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
    # Allow from Lidarr
    - fromEndpoints:
        - matchLabels:
            app:kubernetes.io/component: lidarr
            app:kubernetes.io/instance: lidarr
            app:kubernetes.io/name: lidarr
        - matchLabels:
            io:kubernetes.pod.namespace: downloads
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
    # Allow from Ingress
    - fromEndpoints:
        - matchLabels:
            app:kubernetes.io/component: controller
            app:kubernetes.io/instance: nginx-internal
            app:kubernetes.io/name: ingress-nginx
        - matchLabels:
            io:kubernetes.pod.namespace: network
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
